--- a/AnyPort/pom.xml
+++ b/AnyPort/pom.xml
@@ -44,6 +44,22 @@
 			<version>3.1.1</version>
 		</dependency>
 
+<!--		Spring security dependency  -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+<!--    Dependency for sending jsession id in headers-->
+		<dependency>
+			<groupId>org.springframework.session</groupId>
+			<artifactId>spring-session-core</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
