--- a/AnyPort/pom.xml
+++ b/AnyPort/pom.xml
@@ -64,6 +64,12 @@
 			<optional>true</optional>
 		</dependency>
 
+		<!--Swagger dependency  -->
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-boot-starter</artifactId>
+			<version>3.0.0</version>
+		</dependency>
 
 <!--    Dependency for sending jsession id in headers-->
 		<dependency>
